--- a/Module 4/BootPract.html
+++ b/Module 4/BootPract.html
@@ -4,23 +4,27 @@
         <title>MSIT journey</title>
 
     </head>
-    <body style="background-color:antiquewhite">
+    <body style="background-color:ghostwhite">
         <img src ="https://msitprogram.net/admissions/logo.gif" alt = "Image not found" height = "15%" width = "100%">
         <a href = "http://msitprogram.net/" target = "_blank" title = "Want to know more checkout the website">MSIT Website</a></br>
+        <div style="background-color: aquamarine;">
         <h2> Table of Contents </h2>
         <ul>
             <li><a href="#MSIT">Master Science in Information Technology</a></li>
             <li><a href="#AboutMe">About Me</a></li>
-            <li><a href="Courses">Courses in MSIT</a></li>
-            <li><a href="My journey">My journey at MSIT</a></li>
-            <li><a href="My Courses and its grades">My Courses and its grades</a></li>
+            <li><a href="#Courses">Courses in MSIT</a></li>
+            <li><a href="#My journey">My journey at MSIT</a></li>
+            <li><a href="#My Courses and its grades">My Courses and its grades</a></li>
         </ul>
+        </div>
+        <div style="background-color: cornflowerblue;" >
         <h1 id="MSIT">Master Science in Information Technology</h1>
         <i>MSIT is a two year post graduate program in Computer Science</i>
         <p>MSIT program is being offered by "Consortium of Institutions of 
         Higher Learning" (CIHL), formed by the Universities. Under MOU with 
         CMU, some Carnegie Mellon Researchers are providing guidance on the 
         course content.</p>
+        </div>
         <hr>
         <button onclick="dont click its just button" id="AboutMe">About Me</button></br>
         <br>
@@ -30,6 +34,7 @@
         <b>Mail ID: </b>madhurinaidu1997@msitprogram</br>
         <b>Qualification: </b>B.Tech(Computer Science Engineering)</br>
         <hr>
+        <div style="background-color: lightpink;">
         <h3 id="Courses">Courses in MSIT</h3>
         <ol>
             <li>Computational Thinking</li>
@@ -45,16 +50,20 @@
             <li>Introduction to Cyber Security</li>
             <li>Software App Development</li>
         </ol>
+        </div>
         <hr>
+        <div style="background-color: cyan;">
         <h3 id="My journey">My journey at MSIT</h3>
-        <pre>
+        <p>
             I am the first year student of MSIT. As of my experience this platform is very helpful. 
             There are so many real time courses according to the IT industry.First year courses 
             helps us to get eligible for job and this course made us more confident in IT subjects. 
             In addition to IT courses we were also having SoftSkills which helps us to communicate 
             fluently and confidently among the people. 
-        </pre>
+        </p>
+        </div>
         <hr>
+        <div style="background-color: bisque;">
         <h3 id="My Courses and its grades">My Courses and its grades</h3>
         <table>
             <tr>
@@ -123,5 +132,6 @@
                 <td>InProgress</td>
             </tr>
           </table>
+        </div>
     </body>
 </html>
