--- a/Module 3/MSIT.html
+++ b/Module 3/MSIT.html
@@ -3,7 +3,7 @@
     <head>
         <title>MSIT journey</title>
     </head>
-    <body>
+    <body style="background-color:lightblue;">
         <img src ="https://msitprogram.net/admissions/logo.gif" alt = "Image not found" height = "15%" width = "100%">
         <a href = "http://msitprogram.net/" target = "_blank" title = "Want to know more checkout the website">MSIT Website</a></br>
         <h1>Master Science in Information Technology</h1>
