Done till SCSS linking

--- a/Module 4/BootPract.html
+++ b/Module 4/BootPract.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title>MSIT journey</title>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </head>
     <body style="background-color:ghostwhite">
         <img src ="https://msitprogram.net/admissions/logo.gif" alt = "Image not found" height = "15%" width = "100%">
         <a href = "http://msitprogram.net/" target = "_blank" title = "Want to know more checkout the website">MSIT Website</a></br>
-        <div style="background-color: aquamarine;">
+        <div>
         <h2> Table of Contents </h2>
         <ul>
             <li><a href="#MSIT">Master Science in Information Technology</a></li>
@@ -17,49 +19,51 @@
             <li><a href="#My Courses and its grades">My Courses and its grades</a></li>
         </ul>
         </div>
-        <div style="background-color: cornflowerblue;" >
+        <div class="container">
         <h1 id="MSIT">Master Science in Information Technology</h1>
         <i>MSIT is a two year post graduate program in Computer Science</i>
-        <p>MSIT program is being offered by "Consortium of Institutions of 
-        Higher Learning" (CIHL), formed by the Universities. Under MOU with 
-        CMU, some Carnegie Mellon Researchers are providing guidance on the 
+        <p>MSIT program is being offered by "Consortium of Institutions of
+        Higher Learning" (CIHL), formed by the Universities. Under MOU with
+        CMU, some Carnegie Mellon Researchers are providing guidance on the
         course content.</p>
         </div>
         <hr>
-        <button onclick="dont click its just button" id="AboutMe">About Me</button></br>
+        <div class="container">
+        <h1 id="AboutMe">About Me</h1></br>
         <br>
-        <img src ="2019501105-Madhuri.jpg" alt = "My Image not found" height = "140" width = "120"></br>
+        <img src ="2019501105-Madhuri.jpg" alt = "My Image not found" height = "140" width = "120" style="text-align: center;"></br>
         <b>Name: </b> M.Lakshmi Madhuri</br>
         <b>Roll No: </b>2019501105</br>
         <b>Mail ID: </b>madhurinaidu1997@msitprogram</br>
         <b>Qualification: </b>B.Tech(Computer Science Engineering)</br>
-        <hr>
-        <div style="background-color: lightpink;">
-        <h3 id="Courses">Courses in MSIT</h3>
-        <ol>
-            <li>Computational Thinking</li>
-            <li>Computer Science Principles and Programming - 1</li>
-            <li>Introduction to Data Science</li>
-            <li>Object Oriented Programming (Java)</li>
-            <li>Algorithms and Data Structures - 1</li>
-            <li>Databases</li>
-            <li>Algorithms and Data Structures Part II</li>
-            <li>Introduction to Operating System</li>
-            <li>Computer Network Foundations</li>
-            <li>Software Engineering Foundations</li>
-            <li>Introduction to Cyber Security</li>
-            <li>Software App Development</li>
-        </ol>
         </div>
         <hr>
-        <div style="background-color: cyan;">
+        <div class="container-fluid">
+          <h3 id="Courses">Courses in MSIT</h3>
+          <div class="list-group">
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5d145148c9d9b81758d7407a;courseId=5d1450fec9d9b81758d74071" class="list-group-item list-group-item-action">Computational Thinking</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5d1b9c3567acef1aa613980b;courseId=5d1b9bf667acef1aa6139806" class="list-group-item list-group-item-action">Computer Science Principles and Programming - 1</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5d345108c94d1d156676c8d9;courseId=5d3450b9c94d1d156676c8d5" class="list-group-item list-group-item-action">Introduction to Data Science</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5d660a3fd05fd0433ca89d69;courseId=5d6609b6d05fd0433ca89d64" class="list-group-item list-group-item-action">Object Oriented Programming (Java)</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5d8e1900d225c080939b5886;courseId=5d1959f567acef1aa61397f2" class="list-group-item list-group-item-action">Algorithms and Data Structures - 1</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5dd2ba81e085e82bcdcb75ca;courseId=5d4e436a44fa243d68e75d50" class="list-group-item list-group-item-action">Databases</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5df3c1ad5f0b47fa3a8f1c23;courseId=5df3c0e25f0b47fa3a8f1c19" class="list-group-item list-group-item-action">Algorithms and Data Structures Part II</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5e2fc0a8d52a8e093ab75f57;courseId=5dbad5e3eedbb34e892827a4" class="list-group-item list-group-item-action">Introduction to Operating System</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5e2fc0c7d52a8e093ab75f63;courseId=5dd3cf69e085e82bcdcb7670" class="list-group-item list-group-item-action">Computer Network Foundations</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5dea24c8acb0721959114a3b;courseId=5dea23bdacb0721959114a31" class="list-group-item list-group-item-action">Software Engineering Foundations</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5e6889c8c2b303a753e7d181;courseId=5e68895dc2b303a753e7d174" class="list-group-item list-group-item-action">Introduction to Cyber Security</a>
+            <a href="http://nodelms.msitprogram.net:8000/studytable/courses/5d144f0ac9d9b81758d7406f/5e8d466d087694a69e6aa7ec;courseId=5e8d45fd087694a69e6aa7de" class="list-group-item list-group-item-action">Software App Development</a>
+          </div>
+        </div>
+        <hr>
+        <div style="background-color:beige">
         <h3 id="My journey">My journey at MSIT</h3>
         <p>
-            I am the first year student of MSIT. As of my experience this platform is very helpful. 
-            There are so many real time courses according to the IT industry.First year courses 
-            helps us to get eligible for job and this course made us more confident in IT subjects. 
-            In addition to IT courses we were also having SoftSkills which helps us to communicate 
-            fluently and confidently among the people. 
+            I am the first year student of MSIT. As of my experience this platform is very helpful.
+            There are so many real time courses according to the IT industry.First year courses
+            helps us to get eligible for job and this course made us more confident in IT subjects.
+            In addition to IT courses we were also having SoftSkills which helps us to communicate
+            fluently and confidently among the people.
         </p>
         </div>
         <hr>
@@ -118,14 +122,14 @@
             </tr>
             <tr>
                 <td>10.</td>
-                <td>Software Engineering Foundations</td>   
+                <td>Software Engineering Foundations</td>
                 <td>InComplete</td>
-            </tr> 
+            </tr>
             <tr>
                 <td>11.</td>
                 <td>Introduction to Cyber Security</td>
                 <td>Completed</td>
-            </tr>  
+            </tr>
             <tr>
                 <td>12.</td>
                 <td>Software App Development</td>
@@ -133,9 +137,5 @@
             </tr>
           </table>
         </div>
-        <hr>
-        <h3>Take a Quiz on Me!</h3>
-        <a href="Form.html">Click here!</a>  
     </body>
 </html>
-   
