--- a/Module 4/PracPRo.html
+++ b/Module 4/PracPRo.html
@@ -5,27 +5,37 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="Style.css">
     </head>
     <body>
         <div class="container-fluid p-3 my-3 bg-dark text-white">
-            <h1>Madhuri MSIT</h1>
-            <nav class="navbar navbar-expand-sm bg-light">
+            <h1>Project 0.</h1>
+            <nav class="navbar navbar-expand-sm bg-light"> 
                 <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="PracPRo.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="BootPract.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="help.html">Help</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Form.html" title="to see more;)">Login</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="PracPRo.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="BootPract.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="help.html">Help</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Form.html" title="to see more;)">Login</a>
+                    </li>
                 </ul>
             </nav>
+        </br>           
         </div>
-        <br>
+        <div class="container">
+        <img src="idea.gif" alt="Notebook" style="background-size: cover;">
+        <div class="content">
+            <h5><strong>About Project 0</strong></h5>
+            <p style="font-size: medium; color: azure;">
+                This project 0 is the basic project designed to know how much creative we use HTML, CSS and BootStrap4 for creation of webpage
+            </p>
+        </div>
+        </div>
     </body>
 </html>
