--- a/Module 4/hello.html
+++ b/Module 4/hello.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>My webpage</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </head>
     <body>
         <p>Hello World!</p>
