--- a/Module 4/help.html
+++ b/Module 4/help.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <title>click for help</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </head>
     <body>
         Contact us: madhurinaidu1997@gmail.com
+        <div class="container-fluid">
+        <h2>Problems</h2>
+        <div class="btn-group-vertical">
+            <button type="button" class="btn btn-outline-primary">Website not working</button></br>
+            <button type="button" class="btn btn-outline-dark">Network issues</button></br>
+            <button type="button" class="btn btn-primary">Problem not listed</button></br>
+          </div>
+        </div>
     </body>
 </html>
