--- a/project0/About.html
+++ b/project0/About.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="Stylet.css">
     </head>
     <body style="background-color:ghostwhite">
         <div class="container-fluid"><img src ="https://msitprogram.net/admissions/logo.gif" alt = "Image not found" height = "15%" width = "100%"></div>
@@ -19,6 +20,7 @@
             <li><a href="#My Courses and its grades">My Courses and its grades</a></li>
         </ul>
         </div>
+        <hr>
         <div class="container">
           <h1 id="MSIT">Master Science in Information Technology</h1>
           <i>MSIT is a two year post graduate program in Computer Science</i>
@@ -29,8 +31,7 @@
           </div>
           <hr>
           <div class="container">
-          <h1 id="AboutMe">About Me</h1></br>
-          <br>
+          <h3 id="AboutMe">About Me</h3>
           <img src ="2019501105-Madhuri.jpg" alt = "My Image not found" height = "140" width = "120"></br>
           <b>Name: </b> M.Lakshmi Madhuri</br>
           <b>Roll No: </b>2019501105</br>
@@ -68,73 +69,77 @@
         </div> 
         <hr>
         <div class="container">
-        <h3 id="My Courses and its grades">My Courses and its grades</h3>
-        <table>
-            <tr>
-              <th>S.No</th>
-              <th>Name</th>
-              <th>Status</th>
-            </tr>
-            <tr>
-              <td>1.</td>
-              <td>Computational Thinking</td>
-              <td>Completed</td>
-            </tr>
-            <tr>
-              <td>2.</td>
-              <td>Computer Science Principles and Programming - 1</td>
-              <td>Completed</td>
-            </tr>
-            <tr>
-              <td>3.</td>
-              <td>Introduction to Data Science</td>
-              <td>Completed</td>
-            </tr>
-            <tr>
-              <td>4.</td>
-              <td>Object Oriented Programming (Java)</td>
-              <td>Completed</td>
-            </tr>
-            <tr>
-              <td>5.</td>
-              <td>Algorithms and Data Structures - 1</td>
-              <td>Completed</td>
-            </tr>
-            <tr>
+          <h3 id="My Courses and its grades">My Courses and its grades</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="table-primary">
+                <td>1.</td>
+                <td>Computational Thinking</td>
+                <td>Completed</td>
+              </tr>      
+              <tr class="table-success">
+                <td>2.</td>
+                <td>Computer Science Principles and Programming - 1</td>
+                <td>Completed</td>
+              </tr>
+              <tr class="table-danger">
+                <td>3.</td>
+                <td>Introduction to Data Science</td>
+                <td>Completed</td>
+              </tr>
+              <tr class="table-info">
+                <td>4.</td>
+                <td>Object Oriented Programming (Java)</td>
+                <td>Completed</td>
+              </tr>
+              <tr class="table-warning">
+                <td>5.</td>
+                <td>Algorithms and Data Structures - 1</td>
+                <td>Completed</td>
+              </tr>
+              <tr class="table-primary">
                 <td>6.</td>
                 <td>Databases</td>
                 <td>Completed</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr class="table-success">
                 <td>7.</td>
                 <td>Algorithms and Data Structures Part II</td>
                 <td>Completed</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr class="table-danger">
                 <td>8.</td>
                 <td>Introduction to Operating System</td>
                 <td>Completed</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr class="table-info">
                 <td>9.</td>
                 <td>Computer Network Foundations</td>
                 <td>InComplete</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr class="table-warning">
                 <td>10.</td>
                 <td>Software Engineering Foundations</td>
                 <td>InComplete</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr class="table-primary">
                 <td>11.</td>
                 <td>Introduction to Cyber Security</td>
                 <td>Completed</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr class="table-success">
                 <td>12.</td>
                 <td>Software App Development</td>
                 <td>InProgress</td>
-            </tr>
+              </tr>
+            </tbody>
           </table>
         </div>
     </body>
