--- a/project0/About.html
+++ b/project0/About.html
@@ -9,6 +9,24 @@
     </head>
     <body style="background-color:ghostwhite">
         <div class="container-fluid"><img src ="https://msitprogram.net/admissions/logo.gif" alt = "Image not found" height = "15%" width = "100%"></div>
+        <div>
+          <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand" href="Main.html">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="help.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Form.html">Login</a>
+                </li>    
+              </ul>
+            </div>  
+          </nav>
+        </div>
         <a href = "http://msitprogram.net/" target = "_blank" title = "Want to know more checkout the website">MSIT Website</a></br>
         <div class="container">
         <h2> Table of Contents </h2>
