--- a/project0/Form.html
+++ b/project0/Form.html
@@ -12,6 +12,24 @@
         </style>
     </head> 
     <body>
+        <div>
+          <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand" href="Main.html">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="About.html">About</a> 
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="help.html">Contact</a>
+                </li>
+              </ul>
+            </div>  
+        </nav>
+        </div>
         <div class="container">
         </br>
             <h3>Login Page</h3>
