--- a/project0/help.html
+++ b/project0/help.html
@@ -7,6 +7,24 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     </head>
     <body> 
+        <div>
+            <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                <a class="navbar-brand" href="Main.html">Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="About.html">About</a> 
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Form.html">Login</a>
+                    </li>    
+                  </ul>
+                </div>  
+            </nav>
+        </div>
         <div align = "center">
         <h3>Contact me: madhurinaidu1997@gmail.com</h3>
         <div class="container-fluid">
