--- a/project0/Main.html
+++ b/project0/Main.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="About.html">About</a>
+                      <a class="nav-link" href="About.html">About</a> 
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="help.html">Contact</a>
@@ -32,6 +32,12 @@
                   </ul>
                 </div>  
             </nav>
+        </div>
+        <br>
+        <div class="container" style="text-align: center;">
+          <div class="row">
+            <div class="col-sm-4" style="background-color:lavender;">Grid</div>
+            <div class="col-sm-8" style="background-color:lavenderblush;">By Madhuri Muddala</div>
         </div>
         <br>
         <div class="container">
