added CSS styles to my webpage

--- a/Module 3/MSIT.html
+++ b/Module 3/MSIT.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>MSIT journey</title>
+        <link rel="stylesheet" href="Style.css">
     </head>
-    <body style="background-color:lightblue;">
+    <body>
         <img src ="https://msitprogram.net/admissions/logo.gif" alt = "Image not found" height = "15%" width = "100%">
         <a href = "http://msitprogram.net/" target = "_blank" title = "Want to know more checkout the website">MSIT Website</a></br>
         <h1>Master Science in Information Technology</h1>
@@ -15,11 +16,13 @@
         <hr>
         <button onclick="dont click its just button">About Me</button></br>
         <br>
-        <img src ="2019501105-Madhuri.jpg" alt = "My Image not found" height = "140" width = "120"></br>
-        <b>Name: </b> M.Lakshmi Madhuri</br>
-        <b>Roll No: </b>2019501105</br>
-        <b>Mail ID: </b>madhurinaidu1997@msitprogram</br>
-        <b>Qualification: </b>B.Tech(Computer Science Engineering)</br>
+        <div>
+          <img src ="2019501105-Madhuri.jpg" alt = "My Image not found" height = "140" width = "120"></br>
+          <b>Name: </b> M.Lakshmi Madhuri</br>
+          <b>Roll No: </b>2019501105</br>
+          <b>Mail ID: </b>madhurinaidu1997@msitprogram</br>
+          <b>Qualification: </b>B.Tech(Computer Science Engineering)</br>
+        </div>
         <hr>
         <h3><p>My courses</p></h3>
         <ol>
